--- a/src/Blogger/BlogBundle/Resources/config/routing.yml
+++ b/src/Blogger/BlogBundle/Resources/config/routing.yml
@@ -5,16 +5,21 @@ BloggerBlogBundle_homepage:
     requirements:
          methods:  GET
 
-# src/Blogger/BlogBundle/Resources/config/routing.yml
 BloggerBlogBundle_about:
     path:   /about
     defaults: { _controller: "BloggerBlogBundle:Page:about" }
     requirements:
          methods:  GET
 
-# src/Blogger/BlogBundle/Resources/config/routing.yml
 BloggerBlogBundle_contact:
     path:  /contact
     defaults: { _controller: "BloggerBlogBundle:Page:contact" }
     requirements:
         methods:  POST
+
+BloggerBlogBundle_blog_show:
+    path:  /{id}
+    defaults: { _controller: "BloggerBlogBundle:Blog:show" }
+    requirements:
+        methods:  GET
+        id: \d+
